<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:src="@drawable/news_breeze_icon"
        android:id="@+id/textNews"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/save_image_button"
        android:padding="4dp"
        android:src="@drawable/ic_save"
        android:background="@drawable/corner_primary"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_container"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/border_fullwidth_grey"
        app:layout_constraintTop_toBottomOf="@+id/textNews"
        >

        <EditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="14sp"
            android:hint="@string/search"
            android:id="@+id/edtSearch"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/filter_icon"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_search_small"
            android:background="@null"
            >

        </EditText>
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:id="@+id/filter_icon"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_filter"
            android:contentDescription="@string/filter_icon"
            />


    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/recycler_view_news"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/search_container"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/no_data_available_text"
        android:text="@string/no_data_available"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>